# agent-open-mind

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  config.example.yaml  conftest.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  new_adapter.yml
.github/workflows/: ci.yml
adapters/: __init__.py  claude_api.py  gemini_api.py  grok.py  meta.py  ollama.py  openai_api.py  perplexity.py  self_adapter.py
agent_open_mind/: __init__.py
examples/: sample_thoughts.json
scripts/: extract_thoughts.py  quick_check.py  self_reflect.py
tests/: README.md  test_core_gate.py  validate_adapters.py
tests/unit/: test_adapters.py
